[gd_scene load_steps=28 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://EntityStats.tscn" type="PackedScene" id=3]
[ext_resource path="res://attack.tres" type="Animation" id=4]
[ext_resource path="res://animations/spark-preview3.png" type="Texture" id=5]
[ext_resource path="res://animations/spark-preview2.png" type="Texture" id=6]
[ext_resource path="res://animations/spark-preview1.png" type="Texture" id=7]
[ext_resource path="res://animations/spark-preview4.png" type="Texture" id=8]
[ext_resource path="res://animations/spark-preview5.png" type="Texture" id=9]
[ext_resource path="res://animations/hits-1-1.png" type="Texture" id=10]
[ext_resource path="res://animations/hits-1-2.png" type="Texture" id=11]
[ext_resource path="res://animations/hits-1-3.png" type="Texture" id=12]
[ext_resource path="res://animations/hits-1-4.png" type="Texture" id=13]
[ext_resource path="res://animations/hits-1-5.png" type="Texture" id=14]
[ext_resource path="res://animations/hits-4-4.png" type="Texture" id=15]
[ext_resource path="res://animations/hits-4-5.png" type="Texture" id=16]
[ext_resource path="res://animations/hits-4-1.png" type="Texture" id=17]
[ext_resource path="res://animations/hits-4-3.png" type="Texture" id=18]
[ext_resource path="res://animations/hits-4-7.png" type="Texture" id=19]
[ext_resource path="res://animations/hits-4-2.png" type="Texture" id=20]
[ext_resource path="res://animations/hits-4-6.png" type="Texture" id=21]

[sub_resource type="Animation" id=6]
resource_name = "cure"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("../Cure:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Cure:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=3]
resource_name = "fire"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../Fire:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -400, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Fire:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "heal"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../Heal:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Heal:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 21 ), ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Player" type="Node2D" groups=["party"]]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
mouse_filter = 2
color = Color( 0.52549, 0.811765, 0.482353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="EntityStats" parent="." instance=ExtResource( 3 )]
position = Vector2( -30, 40 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/attack = ExtResource( 4 )
anims/cure = SubResource( 6 )
anims/fire = SubResource( 3 )
anims/heal = SubResource( 4 )

[node name="Shield" type="Panel" parent="."]
visible = false
margin_left = -58.0
margin_top = -40.0
margin_right = -50.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fire" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
frame = 3
playing = true
flip_h = true

[node name="Heal" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 3, 3 )
frames = SubResource( 5 )

[node name="Cure" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
frames = SubResource( 7 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -34.0
margin_top = -35.0
margin_right = 34.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
